[gd_scene load_steps=5 format=3 uid="uid://bbst41osm6krp"]

[ext_resource type="Script" path="res://scenes/UI/main_menu.gd" id="1_kaush"]
[ext_resource type="Texture2D" uid="uid://c16td0uvrattg" path="res://graphics/galaxy-512px-seamless.png" id="1_vvcco"]
[ext_resource type="PackedScene" uid="uid://x5kgqoa26kwd" path="res://scenes/asteroid_spawner.tscn" id="2_0o8bw"]
[ext_resource type="AudioStream" uid="uid://bc7jxgrw3akw1" path="res://sounds/menu_music.wav" id="4_d8his"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_kaush")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(600, 300)
texture = ExtResource("1_vvcco")
region_enabled = true
region_rect = Rect2(0, 0, 1200, 900)

[node name="AsteroidSpawner" parent="." instance=ExtResource("2_0o8bw")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 80

[node name="Label" type="Label" parent="UI/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "ASTEROIDS"

[node name="StartButton" type="Button" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "START"

[node name="ExitButton" type="Button" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "QUIT"

[node name="MarginContainer2" type="MarginContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Credits" type="VBoxContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="UI/Credits"]
layout_mode = 2
text = "Game by pupper"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="UI/Credits"]
layout_mode = 2
text = "Music by zagi2 (freesound.org)"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_d8his")
volume_db = -15.0

[connection signal="pressed" from="UI/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
